--- a/styles.css
+++ b/styles.css
@@ -51,3 +51,10 @@ div footer {
   color: black;
   font-size: 20px
   }
+
+#maintitle {
+  background-color: white;
+  border-style: solid;
+  border-color: yellow;
+  margin-top: 50px;
+}
